# IDCR

./: main.py  pyproject.toml  run.sh  setup.sh
configs/: config.yaml
configs/data/: synthetic.yaml
configs/experiment/: greedy_vs_optimal.yaml  submodularity.yaml
documentations/: idcr.tex  proposal.tex
experiments/: exp1_submodularity.py  exp2_greedy_approx.py  exp3_rl_vs_greedy.py  exp4_interaction_tensor.py  exp5_coverage.py  exp6_baselines.py  exp7_pareto.py
outputs/exp1_submodularity/: results.npz
outputs/exp3_rl_vs_greedy/: results.npz
outputs/exp6_baselines/: results.npz
scripts/: generate_data.py
src/baselines/: few_shot.py  standard_rag.py  zero_shot.py
src/data/: documents.py  llm_augmentation.py  precision_ground_truth.py  synergy_control.py  user_profiles.py
src/evaluation/: coverage.py  metrics.py  pareto.py
src/models/: conformal.py  document_encoder.py  precision_predictor.py  user_encoder.py
src/retrieval/: cosine_retrieval.py  greedy.py  random_retrieval.py  rl_policy.py
src/theory/: interaction_tensor.py  submodularity.py  uncertainty_decomposition.py
src/utils/: linear_algebra.py  ollama_client.py  visualization.py
tests/: test_conformal.py  test_data.py  test_linear_algebra.py
