[project]
name = "idcr"
version = "0.1.0"
description = "Information-Directed Conformal Retrieval for portfolio allocation under uncertainty"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.1",
    "numpy>=1.26",
    "scipy>=1.11",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "tqdm>=4.66",
    "pytest>=7.4",
]

[project.optional-dependencies]
llm = [
    "sentence-transformers>=2.2",
    "requests>=2.31",
]
tracking = [
    "wandb>=0.16",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
